# smart_traffic_light

./: .gitignore  CMakeLists.txt  README.md  info_shortcuts.txt
building blocks/: interrupt.c  struct_and_pointers.c  tasks.c  timer.c
building blocks/MQTT/: MQTT_CLIENT.C  subscribe.c
building blocks/REST_client/: APICallFullJSON.c  getData.c
building blocks/basic_func_temp/: blink.c  delay.c  getInputFromKeyboard.c  keyboardInput.c  logging.c  random.c
building blocks/gpio/: ADC.c  DAC.c  input_output.c  ledc_PWM.c
building blocks/i2c/: i2c.c
building blocks/rtos/: binarySemaphore.c  eventGroup.c  mutex_semaphore.c  notify.c  notify_events.c  queue.c
building blocks/server/: Man_APICalls.c  create_server_mdns.c
building blocks/sleep/: button_wakeup.c  deep_sleep.c  ext_1_wakeup.c  hibernation.c  light_sleep.c  proof.c  wakeup_ext0.c
building blocks/uart/: simple_ping.c
building blocks/website_skeleton/: app.h  cmakeList.c  main.c  pushBtn.c  pushBtn.h  toggle_led.c  toggle_led.h
building blocks/wifi/: basic_connect.c  http_client.c  ntp.c  sta_ap_connect.c  wifiScan.c
components/pedestrian_call/: cmakeLists.txt  pedestrian_call.c  pedestrian_call.h
components/pinsSetup/: CMakeLists.txt  helper.h  pinsSetup.c  pinsSetup.h
components/server/: CMakeLists.txt  server_init.c  server_init.h  urls.c  urls.h
components/tasks/: cMakeLists.txt  traffic_light.c  traffic_light.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h  (+1 more)
main/: CMakeLists.txt  main.c  mymdns.h
site/: package-lock.json  vite.config.ts
(+11 files in other folders)
